--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,7 +1,7 @@
-<header [class]="isStickyHeader() ? 'header-transparent' : 'header-solid'" class="w-[100vw]">
+<header [class]="isStickyHeader() ? 'header-transparent' : 'header-solid'" class="w-screen">
   <div class="flex items-center justify-between w-full">
     <!-- Logo -->
-    <img src="assets/images/logo.svg" alt="Blessing Lynnwood Logo" class="h-[70px] w-auto object-contain" />
+    <img src="assets/images/logo.svg" alt="Blessing Lynnwood Logo" class="h-17.5 w-auto object-contain" />
 
     <!-- Navigation and CTA -->
     <div class="flex max-w-[50vw] items-center gap-10">
