--- a/src/app/app.css
+++ b/src/app/app.css
@@ -15,3 +15,6 @@
 :host > app-footer {
   margin-top: auto;
 }
+
+.no-scrollbar::-webkit-scrollbar { display: none; }
+.no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
