--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -21,14 +21,14 @@
   </section>
 
   <!-- About Us Section -->
-  <section class="about-us shadow-elevation-outer relative bg-cover bg-center bg-no-repeat text-white min-h-screen flex justify-center items-center">
+  <section class="about-us shadow-elevation-outer relative bg-cover bg-center bg-no-repeat text-white min-h-screen flex justify-center items-center overflow-clip">
     <img
       src="assets/images/backdrop-grass.webp"
       alt="Image of a beautiful grassy hedge."
-      class="absolute inset-0 min-w-full min-h-full object-cover -z-10"
+      class="absolute inset-0 min-w-full min-h-full object-cover z-1"
     />
-    <div class="bg-black/50 absolute inset-0 w-full h-full object-cover -z-10"></div>
-    <div class="shadow-elevation bg-sage-transparent rounded-2xl m-auto p-8 text-center">
+    <div class="bg-black/50 absolute inset-0 w-full h-full object-cover z-1"></div>
+    <div class="shadow-elevation bg-sage-transparent rounded-2xl m-auto p-8 text-center z-2">
       <h2 class="text-4xl font-thin mb-8">{{ 'about.title' | translate }}</h2>
       @for (paragraph of 'about.description' | translate; track $index) {
         <p class="text-lg max-w-2xl mb-6">{{ paragraph }}</p>
