--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,51 +1,55 @@
 <main class="w-full min-h-full bg-neutral-dark">
   <!-- Hero Section -->
   <section class="hero flex items-center justify-center w-full mx-auto bg-neutral-dark text-white">
-    <img
-      src="assets/images/hero-image.webp"
-      alt="Blessing Lynnwood Hero Image"
-      class="basis-1/2 w-1/2 h-auto object-cover"
-    />
+    <img src="assets/images/hero-image.webp" alt="Blessing Lynnwood Hero Image"
+      class="basis-1/2 w-1/2 h-auto object-cover" />
     <div class="basis-1/2 pt-15 px-8 text-right flex flex-col items-start">
       <h1 class="text-5xl font-bold text-white my-8 md:-ml-12">{{ 'hero.title' | translate }}</h1>
       <div class="w-1/2">
         <p>{{ 'hero.subtitle' | translate }}</p>
       </div>
-      <a
-        href="#booking"
-        class="decoration-line-up block mt-6 rounded-full border-2 border-sage text-sage px-6 py-2.5 text-button font-semibold transition-colors"
-      >
+      <a href="#booking"
+        class="decoration-line-up block mt-6 rounded-full border-2 border-sage text-sage px-6 py-2.5 text-button font-semibold transition-colors">
         {{ 'hero.bookNow' | translate }}
       </a>
     </div>
   </section>
 
   <!-- About Us Section -->
-  <section class="about-us shadow-elevation-outer relative bg-cover bg-center bg-no-repeat text-white min-h-screen flex justify-center items-center overflow-clip">
-    <img
-      src="assets/images/backdrop-grass.webp"
-      alt="Image of a beautiful grassy hedge."
-      class="absolute inset-0 min-w-full min-h-full object-cover z-1"
-    />
+  <section
+    class="about-us shadow-elevation-outer relative bg-cover bg-center bg-no-repeat text-white min-h-screen flex justify-center items-center overflow-clip">
+    <img src="assets/images/backdrop-grass.webp" alt="Image of a beautiful grassy hedge."
+      class="absolute inset-0 min-w-full min-h-full object-cover z-1" />
     <div class="bg-black/50 absolute inset-0 w-full h-full object-cover z-1"></div>
     <div class="shadow-elevation bg-sage-transparent rounded-2xl m-auto p-8 text-center z-2">
       <h2 class="text-4xl font-thin mb-8">{{ 'about.title' | translate }}</h2>
       @for (paragraph of 'about.description' | translate; track $index) {
-        <p class="text-lg max-w-2xl mb-6">{{ paragraph }}</p>
+      <p class="text-lg max-w-2xl mb-6">{{ paragraph }}</p>
       }
-      <a class="rounded-3xl bg-sage-40 hover:bg-sage-60 text-white transition-colors px-6 py-2 inline-block">You can find us here <img class="inline-block fill-white" src="assets/images/icons/location.svg"/></a>
+      <a class="rounded-3xl bg-sage-40 hover:bg-sage-60 text-white transition-colors px-6 py-2 inline-block">You can
+        find us here
+        <img class="inline-block fill-white" src="assets/images/icons/location.svg" /></a>
     </div>
   </section>
 
   <!--- Gallery Section -->
   <section class="w-full py-32 px-4 md:px-20 flex flex-col gap-10 overflow-hidden bg-blessing-gradient">
-       <!-- Header -->
-       <div class="flex items-end gap-3 max-w-7xl mx-auto w-full">
-         <h3 class="text-heading-3 text-white flex-1">Your own</h3>
-         <div class="border-b-2 border-[#CFBB9A33] h-2 basis-2/3 grow shrink-0"></div>
-         <h2 class="text-heading-2-accent text-white flex-1">space</h2>
-       </div>
-       <app-gallery-carousel [slides]="carouselImages"></app-gallery-carousel>
+    <!-- Header -->
+    <div class="flex items-end gap-3 max-w-7xl mx-auto w-full">
+      <h3 class="text-heading-3 text-white flex-1">Your own</h3>
+      <div class="border-b-2 border-[#CFBB9A33] h-2 basis-2/3 grow shrink-0"></div>
+      <h2 class="text-heading-2-accent text-white flex-1">space</h2>
+    </div>
+    <app-gallery-carousel [slides]="carouselImages"></app-gallery-carousel>
+  </section>
 
+  <!-- Amenities Section -->
+  <section class="amenities w-full py-32 px-4 md:px-20">
+    <div class="flex justify-evenly flex-wrap gap-5">
+      @for (amenity of amenities; track $index) {
+      <app-amenity class="flex-1 basis-1/2 md:basis-1/3 xl:basis-1/4" [icon]="amenity.icon" [title]="amenity.title"
+        [description]="amenity.description"></app-amenity>
+      }
+    </div>
   </section>
 </main>
