--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,3 +1,9 @@
+body,
+html,
+:host {
+  scroll-behavior: smooth;
+}
+
 /* App component styles */
 :host {
   position: relative;
@@ -5,7 +11,6 @@
   flex-direction: column;
   min-height: 100vh;
   overflow: visible;
-  scroll-behavior: smooth;
 }
 
 :host > app-header {
@@ -16,5 +21,10 @@
   margin-top: auto;
 }
 
-.no-scrollbar::-webkit-scrollbar { display: none; }
-.no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
