--- a/src/app/pages/your-stay/your-stay.html
+++ b/src/app/pages/your-stay/your-stay.html
@@ -1,1 +1,49 @@
-<p>your-stay works!</p>
+<main class="w-full min-h-screen bg-[#FFFBF4] py-20 px-6 md:px-20 lg:px-40 text-primary-60">
+  <h1 class="text-heading-1 text-primary-60 mb-20 font-medium"
+    [innerHTML]="'yourStay.title' | translate | lastWordFancy"></h1>
+
+  <div class="flex-1 flex flex-col gap-9">
+    <h2 class="text-heading-3 text-neutral-dark">{{ 'yourStay.location.title' | translate }}</h2>
+    <!-- Map -->
+    <div class="w-full h-[188px] rounded-lg overflow-hidden shadow-elevation bg-gray-200">
+      <iframe width="100%" height="100%" frameborder="0" style="border: 0" [src]="googleMapsUrl" allowfullscreen
+        loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
+    <a href="https://maps.app.goo.gl/ik4sFu38WHiKzUjS9" target="_blank"
+      class="inline-flex items-center gap-2.5 px-5 py-2.5 rounded-full border-2 border-sage-50 text-sage-60 text-button font-normal transition-colors hover:bg-sage-50 hover:text-white self-start">
+      {{ 'yourStay.location.button' | translate }}
+      <img src="assets/images/icons/location.svg" class="w-6 h-6 fill-current" alt="" />
+    </a>
+  </div>
+
+  <div class="flex-1 flex flex-col gap-13 mt-12">
+    <h2 class="text-heading-3 text-neutral-dark">{{ 'yourStay.info.title' | translate }}</h2>
+
+    <div class="flex flex-col gap-6 text-neutral-dark">
+      @for (item of infoItems; track item.translationKey) {
+      <div class="flex gap-8 pb-6 border-b border-tan-30 last:border-0">
+        <img [src]="'assets/images/icons/' + item.icon + '.svg'" class="w-7 h-7 shrink-0" alt="" />
+        <div class="flex gap-2 sm:gap-5 w-full" [class.flex-col]="!item.sameLine" [class.items-center]="item.sameLine">
+          <span class="text-subheading-2 whitespace-nowrap underline">
+            {{ (item.translationKey + '.title') | translate }}
+          </span>
+          <p class="text-body-1 whitespace-pre-line leading-relaxed"
+            [innerHTML]="(item.translationKey + '.text') | translate"></p>
+        </div>
+      </div>
+      }
+    </div>
+
+    <!-- Contact -->
+    <div class="flex items-center gap-8 mt-4">
+      <span class="text-button tracking-wide">
+        {{ 'yourStay.contact.title' | translate }}
+      </span>
+      <a routerLink="/contact-us"
+        class="inline-block px-6 md:px-16 py-2.5 md:py-5 rounded-full bg-sage-50 text-white text-button hover:bg-sage-60 transition-colors">
+        {{ 'yourStay.contact.button' | translate }}
+      </a>
+    </div>
+  </div>
+</main>
