--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@
   --color-sage-30: #d9e2ab;
   --color-sage-20: #f6ffc9;
   --color-sage: #899064;
-  --color-sage-transparent: rgba(54, 64, 37, 0.50);
+  --color-sage-transparent: rgba(54, 64, 37, 0.5);
 
   /* Colors - Lime Green */
   --color-lime-60: #64734a;
@@ -210,6 +210,15 @@
     font-family: var(--font-family-secondary);
   }
 
+  h1 i,
+  h2 i,
+  h3 i,
+  h4 i,
+  h5 i,
+  h6 i {
+    font-family: var(--font-family-secondary);
+  }
+
   *,
   *::before,
   *::after {
@@ -219,4 +228,16 @@
 
 .bg-blessing-gradient {
   background: linear-gradient(1deg, #222421 0.94%, #111 191.44%);
+}
+
+.shadow-elevation {
+  box-shadow:
+    0 4px 4px 0 rgba(0, 0, 0, 0.25),
+    0 4px 4px 0 rgba(255, 255, 255, 0.05) inset;
+}
+
+.shadow-elevation-outer {
+  box-shadow:
+    0 8px 12px 6px rgba(0, 0, 0, 0.15),
+    0 4px 4px 0 rgba(0, 0, 0, 0.3);
 }
